[tool.poetry]
name = "env-loader"
version = "0.1.0"
description = ""
authors = ["Nikhil Pallamreddy"]
readme = "README.md"
packages = [{include = "env_loader"}]
license = "MIT"
repository = "https://github.com/npalladium/env-loader"
keywords = ["config", "env", "environment variable"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
isort = "^5.11.4"
flake8 = "^6.0.0"
flake8-bugbear = "^22.12.6"
flake8-builtins = "^2.0.1"
flake8-docstrings = "^1.6.0"
pytest = "^7.2.0"
nox = "^2022.11.21"
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"
autodocsumm = "^0.2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
